# Bioinformatics_env

./: .env.example  .env.example.linux  .env.example.macos  .env.example.windows  .gitattributes  .gitignore  .trivyignore  CHANGELOG.md  Containerfile  Dockerfile  Installation_guide.md  QUICK_REFERENCE.md  README.md  Rstudio_server_issue.md  VERSIONS.md  complete-fix-script.sh  debug-rstudio.sh  deploy.sh  docker-compose.yml  extract_installed_versions.sh  install_r_packages.R  install_r_packages_v2.R  package_test_config.R  pyproject.toml  r-packages.txt  scan-vulnerabilities.sh  startup_fixed.sh  startup_proper.sh  test_packages.sh  test_python_packages.py  test_r_packages.R  test_r_packages_flexible.R  update_r_packages_versions.R  verify_setup.sh
.github/workflows/: security-scan.yml
