[project]
name = "bioinformatics-env"
version = "1.0.0"
description = "Python dependencies for Bioinformatics Docker Environment"
requires-python = ">=3.8"
dependencies = [
    # Jupyter ecosystem
    "jupyter==1.0.0",
    "jupyterlab==4.0.9",
    
    # Core scientific computing
    "numpy==1.26.2",
    "pandas==2.1.4",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "scipy==1.11.4",
    
    # Machine learning
    "scikit-learn==1.3.2",
    
    # Visualization
    "plotly==5.18.0",
    "bokeh==3.3.2",
    "altair==5.2.0",
    
    # Jupyter widgets
    "ipywidgets==8.1.1",
    
    # R integration
    "rpy2==3.5.15",
]

[tool.uv]
# Use uv's resolution strategy for faster installs
resolution = "highest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"