[project]
name = "bioinformatics-env"
version = "1.0.0"
description = "Python dependencies for Bioinformatics Container Environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Jupyter ecosystem
    "jupyter==1.0.0",
    "jupyterlab==4.0.9",

    # Core scientific computing
    "numpy==1.26.2",
    "pandas==2.1.4",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "scipy==1.14.1",

    # Machine learning
    "scikit-learn==1.3.2",

    # Statistical analysis
    "statsmodels==0.14.6",

    # Visualization
    "plotly==5.18.0",
    "bokeh==3.3.2",
    "altair==5.2.0",

    # Jupyter widgets
    "ipywidgets==8.1.1",

    # Bioinformatics
    "biopython==1.87",
    "pysam==0.23.3",
    "anndata==0.10.9",
    "scanpy==1.10.4",
    "pyranges==0.1.4",

    # HDF5 support (common genomic data format)
    "h5py==3.16.0",

    # R integration
    "rpy2==3.6.7",
]

[tool.uv]
resolution = "highest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
